...
    <string name="meal_override_title">Nutrition override</string>
    <string name="meal_override_kcal">kcal/100</string>
    <string name="meal_override_carb">carb/100</string>
    <string name="meal_override_fat">fat/100</string>
    <string name="meal_override_protein">protein/100</string>
    <string name="meal_override_note">Note</string>
    <string name="meal_override_save">Save override</string>
    <string name="meal_override_clear">Clear override</string>
    <string name="meal_day_totals">Day totals</string>
    <string name="meal_total_calories">Calories: %1$.1f</string>
    <string name="meal_total_carbs">Carbs: %1$.1f</string>
    <string name="meal_total_fat">Fat: %1$.1f</string>
    <string name="meal_total_protein">Protein: %1$.1f</string>
...
    <string name="history_meal_source">Source: %1$s</string>
    <string name="history_delete_confirm_title">Delete meal?</string>
    <string name="history_delete_confirm_message">Do you want to delete %1$s?</string>
    <string name="history_override_dialog_title">Edit nutrient values</string>
    <string name="history_override_save">Save override</string>
    <string name="history_override_note">Note</string>
    <string name="history_override_invalid_number">Enter valid numbers (>= 0)</string>
    <string name="history_override_at_least_one_required">Set at least one nutrient value</string>
    <string name="history_override_kcal">kcal/100</string>
    <string name="history_override_carb">carb/100</string>
    <string name="history_override_fat">fat/100</string>
    <string name="history_override_protein">protein/100</string>
    <string name="history_override_saturated_fat">saturated fat/100</string>
...
